Fix scrollbar

--- a/UI/src/app/app.scss
+++ b/UI/src/app/app.scss
@@ -27,7 +27,7 @@
   border-top: 0 !important;
 }
 
-@media only screen and (min-width: 1025px) {
+@media only screen and (min-width: 769px) {
   ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
